[package]
name = "mattermost_api"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the Mattermost API"
readme = "README.md"
homepage = "https://github.com/Celeo/mattermost_api"
repository = "https://github.com/Celeo/mattermost_api"
documentation = "https://docs.rs/mattermost_api"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = [
  "mattermost"
]
categories = [
  "api-bindings"
]

[dependencies]
http = "0.2.5"
log = "0.4.14"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
thiserror = "1.0.30"

[dev-dependencies]
mockito = "0.30.0"
tokio = { version = "1.13.0", features = ["full"] }
