[package]
name = "mattermost_api"
version = "0.8.1"
edition = "2021"
description = "Rust bindings for the Mattermost API"
readme = "README.md"
homepage = "https://github.com/Celeo/mattermost_api"
repository = "https://github.com/Celeo/mattermost_api"
documentation = "https://docs.rs/mattermost_api"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["mattermost"]
categories = ["api-bindings"]

[dependencies]
async-trait = "0.1.88"
async-tungstenite = { version = "0.16.1", features = ["tokio-runtime"] }
futures-util = "0.3.31"
http = "1.3.1"
log = "0.4.27"
reqwest = { version = "0.12.20", features = ["json"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"], optional = true }
url = "2.5.4"

[features]
default = ["native-tls", "ws-keep-alive"]
ws-keep-alive = ["dep:tokio"]
native-tls = ["async-tungstenite/tokio-native-tls", "reqwest/native-tls"]
rustls-native-certs = [
  "async-tungstenite/tokio-rustls-native-certs",
  "reqwest/rustls-tls-native-roots",
]
rustls = ["async-tungstenite/tokio-rustls-webpki-roots", "reqwest/rustls-tls"]

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1.45.1", features = ["full"] }
